Event-path fix-up for PointerEvents in shadow dom.

This CL fixes the bug that fired PointerEvents can have |relatedEvent|
pointing to shodow dom nodes.

BUG=680377

Review-Url: https://codereview.chromium.org/2640413002
Cr-Commit-Position: refs/heads/master@{#445414}

Former-commit-id: 8faf57e342f36ad4edb0a99b260f81889a2b6f77